New sample files for the weizmann paper

--- a/data/epigenland/samples/m_hema_weizmann_s2014_hi_EryB.sample
+++ b/data/epigenland/samples/m_hema_weizmann_s2014_hi_EryB.sample
@@ -1,14 +1,14 @@
-name=m_hema_weizmann_s2014_hi_EryB
 biosource=nucleate erythrocyte
 extra_metadata_1=dataset:m_hema_weizmann_s2014_hi
-extra_metadata_2=short_name:Ery B
-extra_metadata_3=organism:mus musculus
-extra_metadata_4=cell_type:Erythrocytes B (Ery B)
-extra_metadata_5=biosource:nucleate erythrocyte
-extra_metadata_6=CL_ID:CL_0000562
-extra_metadata_7=cell_identification:Ter119+ CD71+ low FSC
-extra_metadata_X=cell_lineage:splenic erythroid cells
-extra_metadata_8=strain:C57BL/6
-extra_metadata_X=publication:David Lara-Astiaso et al., Science Vol. 345 no. 6199: 943-949
-extra_metadata_X=publication_DOI:10.1126/science.1256271
-extra_metadata_X=institute:Weizmann Institute of Science Israel
+extra_metadata_2=samplename:m_hema_weizmann_s2014_hi_EryB
+extra_metadata_3=short_name:Ery B
+extra_metadata_4=organism:mus musculus
+extra_metadata_5=cell_type:Erythrocytes B (Ery B)
+extra_metadata_6=biosource:nucleate erythrocyte
+extra_metadata_7=CL_ID:CL_0000562
+extra_metadata_8=cell_identification:Ter119+ CD71+ low FSC
+extra_metadata_9=cell_lineage:splenic erythroid cells
+extra_metadata_10=strain:C57BL/6
+extra_metadata_11=publication:David Lara-Astiaso et al., Science Vol. 345 no. 6199: 943-949
+extra_metadata_12=publication_DOI:10.1126/science.1256271
+extra_metadata_13=institute:Weizmann Institute of Science Israel
